# agent-examples

./: .coveragerc  .gitignore  CLAUDE.md  INSTALL.md  README.md  TODO.md  adele_lorem.txt  anime_lorem.txt  beatles_lorem.txt  beyonce_lorem.txt  bruno_mars_lorem.txt  cyberpunk_lorem.txt  disney_princess_lorem.txt  docker-compose.yml  ed_sheeran_lorem.txt  epic_fantasy_lorem.txt  example_env  getting-started.md  got_lorem.txt  harry_potter_lorem.txt  hello-world-architecture.md  hello_function.py  hobbit_lorem.txt  init-models.sh  install.py  install.sh  johnny_cash_lorem.txt  marvel_lorem.txt  pirates_lorem.txt  pyproject.toml  pytest.ini  requirements-core.txt  requirements-dev.txt  requirements-optional.txt  requirements.txt  sherlock_holmes_lorem.txt  star_wars_lorem.txt  steampunk_lorem.txt  taylor_swift_lorem.txt  uv.toml  (+1 more)
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: config.yml
AWS_Strands/: .chatrc.example  CONFIG.md  Chat_TODO.md  chat_config.py  chat_loop.py  utilities.py
AWS_Strands/Complex_Coding_Clara/: CLEANUP_RECOMMENDATIONS.md  FIXES.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  README.md  STATUS.md  TODO.md  TOOLS_UPDATE_SUMMARY.md  __init__.py  agent.py  agent_health_check.py  coding-agent-architecture.md  config_validator.py  extract_prompts.py  prompts.py  requirements.txt
AWS_Strands/Complex_Coding_Clara/.any_agent/: localhost_app.py
AWS_Strands/Complex_Coding_Clara/agents/: __init__.py
AWS_Strands/Complex_Coding_Clara/agents/agile_specialist/: TODO.md  agent.py  prompt.py
AWS_Strands/Complex_Coding_Clara/agents/architect/: TODO.md  agent.py  prompt.py
AWS_Strands/DeepResearch_Dave/: AGENT_SUMMARY.md  README.md  TODO.md  __init__.py  agent.py  example_usage.py  gap_analysis.md  prompts.py  test_basic.py
AWS_Strands/DeepResearch_Dave/evals/: test_research_capabilities.py
AWS_Strands/Orchestrator_Ollie/: README.md  __init__.py  agent.py  prompts.py  requirements.txt  subagent.py  test_data.csv
AWS_Strands/Product_Chandler/: __init__.py  agent.py  prompts.py  requirements.txt
AWS_Strands/Product_Chandler/evals/: EVALUATION_RESULTS.md  eval_results.json  list_tools_test.json  requirements.txt  run_eval.py
AWS_Strands/Product_Pete/: __init__.py  agent.py  prompts.py
AWS_Strands/Product_Pete/evals/: run_eval.py
AWS_Strands/QuickResearch_Quinten/: AGENT_SUMMARY.md  README.md  __init__.py  agent.py  example_usage.py  prompts.py  requirements.txt  tools.py
AWS_Strands/QuickResearch_Quinten/evals/: test_quick_research.py
AWS_Strands/simple_sally/: __init__.py  agent.py  agentcore_app.py  prompts.py  pyproject.toml  requirements.txt
CrewAI/: TODO.md  getting-started.md
FileOps/: agent.py
Google ADK/: __init__.py  getting-started.md
Google ADK/Butler_Basil/: __init__.py
Google ADK/FileOps/: README.md  TODO.md  __init__.py  agent.py  prompts.py
Google ADK/FileOps_Freddy/: __init__.py  agent.py  prompts.py
Google ADK/test/: __init__.py  test_butler_basil.py  test_fileops_freddy.py
GoogleADK/: ADK-getting-started.md  ADK-testing-evals.md  __init__.py  getting-started.md  requirements.txt
GoogleADK/Butler_Basil/: README.md  TODO.md  __init__.py  agent.py  prompts.py  requirements.txt
GoogleADK/Butler_Basil/evals/: list_available_tools.test.json  list_available_tools_test.json  test_butler_basil_agent_evaluation.py
GoogleADK/Data_Daniel/: README.md  TODO.md  __init__.py  agent.py  prompts.py
GoogleADK/Data_Daniel/evals/: list_available_tools_test.json  test_data_daniel_agent_evaluation.py
GoogleADK/FileOps_Freddy/: README.md  TODO.md  __init__.py  agent.py
GoogleADK/FileOps_Freddy/evals/: list_available_tools_test.json  test_fileops_freddy_agent_evaluation.py
GoogleADK/Jira_Johnny/: HTTP_MCP_SOLUTION.md  README.md  TODO.md  __init__.py  agent.py  prompts.py
GoogleADK/Jira_Johnny/evals/: 00_list_available_tools_test.json  01_jira_get_agile_boards_test.json  02_jira_search_test.json  03_jira_create_issue_test.json  04_jira_get_issue_test.json  05_jira_update_issue_test.json  06_jira_add_comment_test.json  07_jira_add_worklog_test.json  08_jira_transition_issue_test.json  09_jira_create_issue_link_test.json  10_jira_create_sprint_test.json  11_jira_batch_create_issues_test.json  list_available_tools_test.json  test_jira_johnny_agent_evaluation.py
GoogleADK/Scrum_Sam/: README.md  TODO.md  __init__.py  agent.py  prompts.py
GoogleADK/Scrum_Sam/evals/: list_available_tools_test.json  test_jira_integration.json  test_scrum_sam_agent_evaluation.py
GoogleADK/Stocks_Sarah/: README.md  TODO.md  __init__.py  agent.py  prompts.py
GoogleADK/Stocks_Sarah/evals/: list_available_tools_test.json  test_stocks_sarah_agent_evaluation.py
GoogleADK/Story_Sage/: README.md  TODO.md  __init__.py  agent.py  prompts.py
GoogleADK/Story_Sage/evals/: list_available_tools_test.json  test_story_sage_agent_evaluation.py
GoogleADK/test/: __init__.py  test_butler_basil.py  test_fileops_freddy.py
Hugging Face SmolAgents/: TODO.md  getting-started.md
LangChain LangGraph/: TODO.md  getting-started.md
LangChain/Simple_Sam/: README.md  __init__.py
MS AutoGen/: TODO.md  getting-started.md
PRD_Examples/Deep Research Agent/: 01-README.md  03-technical-architecture.md  04-user-stories.md
basic_dir_file_operations/: TODO.md  agent.py  prompt.py
claude_sub_agents/: react-typescript-mui-developer.md
configs/: env_config.py  model_configs.py
docs/: README.md
docs/agent_templates/: qa-testing-agent.md  user-story-crafter.md
docs/prd_examples/Deep Research Agent/: 02-main-prd.md
errors/: errors.txt
repl_state/: repl_state.pkl
scripts/: init-models.sh
scripts/strands_chat_loop/: README.md  __init__.py  chat_loop.py  requirements.txt
tests/: __init__.py
tests/GoogleADK/: __init__.py
(+61 files in other folders)
