[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-examples"
version = "0.1.0"
description = "Google ADK Agent Examples"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "mcp>=1.1.3",
    "robin-stocks",
    "pydantic>=2.0.0",
    "hatch-vcs",
    "anthropic>=0.64.0",
]

[tool.hatch.build.targets.wheel]
packages = ["GoogleADK", "scripts", "AWS_Strands.strands_docs_mcp-server.src.strands_mcp_server"]
