[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-examples"
version = "0.1.0"
description = "Collection of AI agent examples using Google ADK, Strands, LangChain, and other frameworks"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["ai", "agents", "examples", "google-adk", "strands", "langchain", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Open-Agent-Tools/agent-examples"
Repository = "https://github.com/Open-Agent-Tools/agent-examples"
"Bug Tracker" = "https://github.com/Open-Agent-Tools/agent-examples/issues"
dependencies = [
    "mcp>=1.1.3",
    "robin-stocks",
    "pydantic>=2.0.0",
    "hatch-vcs",
    "anthropic>=0.64.0",
    "strands-agents[anthropic]>=1.1.0",
    "strands-agents-tools>=0.2.4",
    "python-dotenv>=1.0.0",
    "pandas>=2.3.2",
    "numpy>=2.2.6",
    "openai>=1.101.0",
    "litellm>=1.75.9",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "basic-open-agent-tools>=0.11.0",
    "requests>=2.32.4",
    "httpx>=0.28.1",
    "aiohttp>=3.12.15",
    "rich>=14.1.0",
    "click>=8.2.1",
    "typer>=0.16.1",
    "openpyxl>=3.1.5",
    "markdown>=3.8.2",
    "pyyaml>=6.0.2",
    "google-adk>=1.10.0",
    "pytest>=7.4.0",
    "tavily-python>=0.7.11",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["GoogleADK", "scripts", "AWS_Strands.strands_docs_mcp-server.src.strands_mcp_server"]
